--- a/usermanager/src/main/webapp/index.html
+++ b/usermanager/src/main/webapp/index.html
@@ -6,10 +6,10 @@
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
  <script src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
 
- <script src="lib/angular.min.js"></script>
- <script src="lib/angular-route.min.js"></script>
- <script src="lib/angular-animate.min.js"></script>
- <script src="lib/angular-sanitize.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-animate.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-sanitize.min.js"></script>
  <script src="lib/angular-strap.min.js"></script>
  <script src="lib/angular-strap.tpl.min.js"></script>
  <script src="lib/angular-datatables.min.js"></script>
