AngularJS test code

--- a/usermanager/src/main/webapp/index.html
+++ b/usermanager/src/main/webapp/index.html
@@ -18,6 +18,7 @@
 
  <script src="scripts/app.js"></script>
  <script src="scripts/services/userwebservice.js"></script>
+ <script src="scripts/services/echo-service.js"></script>
  <script src="scripts/controllers/employee.js"></script>
  
  
@@ -43,7 +44,7 @@
 		  </ul>
 	</nav>	
 	<section class="container content" style="padding-top:100px;height:100%;">
-		<div id="content" ng-view />
+		<div id="content" ng-view></div>
 	</section>		
 </body>
 </html>
